# nes-emulator

./: CMakeLists.txt  build.sh  main.cpp
include/: cpu.hpp
src/: cpu.cpp
tst/: cpu_test.cpp
